# Brainfuck

./: Data.c  Data.h  Interactive.c  Interactive.h  Interpreter.c  Interpreter.h  Main.c  Make.bat  Makefile  README.md  Static.c  Static.h  StringUtils.c  StringUtils.h  TODO.txt
C++/: CMakeLists.txt
C++/data/: test.brainfuck
C++/src/: brainfuck.cpp  brainfuck.hpp  io.cpp  io.hpp  main.cpp  parser.cpp  parser.hpp
Tests/: Alphabet.bf
